--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13-A01-Assignment-01-Sabbir</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./styles/index.css" class="cs">
 </head>
-<body>
+<body class="fonts-inter">
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./assets/logo-navbar.png" alt="logo-navbar">
+            </div>
+            <div>
+                <ul class="menu">
+                    <li><a href=""></a>Features</li>
+                    <li><a href=""></a>How It Works</li>
+                    <li><a href=""></a>Why It's Different</li>
+            </ul>
+            </div>
+            <div>
+                <button class="btn-1">Get Early Access</button>
+            </div>
+        </nav>
+    </header>
     
 </body>
-</html>
