Aded Hero Section with proper css styles and added nav button hover in this commit

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- font-family -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<!-- font-Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./styles/index.css" class="cs">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body class="fonts-inter">
     <header>
@@ -28,6 +31,27 @@
                 <button class="btn-1">Get Early Access</button>
             </div>
         </nav>
+
+        <section class="container">
+            <div class="container-secondary">
+            <div class="container-1st-text">
+                <div class="dot-png"><img src="./assets/Group 5.png"></div>
+                <div>Early Access Now Open</div>
+            </div>
+            <div class="container-2nd-text">
+                <h1 style="color:#ffffff">Structured Thinking,</h1>
+                <h1 style="color:#30B868">Not Just Note-Taking.</h1>
+                <p>A private space to store notes, links, and learning summaries — designed to</p>
+                <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                </p>
+            </div>
+            <div class="btn-hero">
+                <button class="btn-hero1">Start Building Your Vault  <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn-hero2"><i class="fa-regular fa-circle-play"></i> See How It Works</button>
+            </div>
+            </div>
+
+        </section>
     </header>
     
 </body>
