--- a/index.html
+++ b/index.html
@@ -86,6 +86,68 @@
                 </div>
             </div>
         </section>
+
+        <section id="brain-section">
+            <div class="brain-container">
+                <div class="brain-image">
+                    <img src="./assets/knowledge.png"; alt=""></img>
+                </div>
+                <div class="brain-text">
+                    <div class="brain-header">
+                        <h5>THE SOLUTION</h5>
+                        <h1>Your second brain,<br>structured by design.</h1>
+                        <p>Personal Knowledge Vault isn't another note-taking app.<br>It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
+
+                        <div class="features-list">
+                            <div class="feature-item">
+                                <img src="./assets/CheckCircle.png" alt="checkmark png"><span class="feature-text">Capture ideas with structure built-in from day one</span> 
+                            </div>
+                            <div class="feature-item">
+                                <img src="./assets/CheckCircle.png" alt="checkmark png"><span>Connect related concepts automatically as you write</span> 
+                            </div>
+                            <div class="feature-item">
+                                <img src="./assets/CheckCircle.png" alt="checkmark png"><span>Build lasting knowledge through reflection prompts</span> 
+                            </div>
+                            <div class="feature-item">
+                                <img src="./assets/CheckCircle.png" alt="checkmark png"><span>Find anything instantly with semantic search</span> 
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="content-box">
+            <div class="content-box-2">
+                <div class="content-text">
+                    <h5>Ready to think more clearly?</h5>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+                </div>
+                <div class="content-btn-4">
+                    <button class="btn-4"><a href="">Get Early Access <i class="fa-solid fa-arrow-right"></i></a></button>
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+            </div>
+        </section>
     </header>
-    
+    <footer>
+        <section class="footer-1">
+            <div>
+                <img src="./assets/logo-footer.png">
+            </div>
+            <div>
+                <h5>Social Links</h5>
+                <div class="footer-logo">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+        </section>
+        <div class="copy">
+            <p> &copy;2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
