fixed all button anchor html and css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
             </div>
             <div>
-                <button class="btn-1">Get Early Access</button>
+                <button class="btn-1"><a href="">Get Early Access</a></button>
             </div>
         </nav>
 
@@ -46,8 +46,8 @@
                 </p>
             </div>
             <div class="btn-hero">
-                <button class="btn-hero1">Start Building Your Vault  <i class="fa-solid fa-arrow-right"></i></button>
-                <button class="btn-hero2"><i class="fa-regular fa-circle-play"></i> See How It Works</button>
+                <button class="btn-hero1"><a href="">Start Building Your Vault  <i class="fa-solid fa-arrow-right"></a></i></button>
+                <button class="btn-hero2"><a href=""><i class="fa-regular fa-circle-play"></i> See How It Works</a></button>
             </div>
             </div>
 
