--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
                 <button class="btn-hero2"><a href=""><i class="fa-regular fa-circle-play"></i> See How It Works</a></button>
             </div>
             </div>
-
         </section>
-        <section id="Card">
+    </header>
+    <section>
+                <section id="Card">
             <div class="card-container">
                 <div class="card-heading">
                     <h2>Notes don't fail, Structure does.</h2>
@@ -131,7 +132,7 @@
                 </div>
             </div>
         </section>
-    </header>
+    </section>
     <footer>
         <section class="footer-1">
             <div>
