--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                 </div>
             </div>
         </section>
+        
         <div class="copy">
+            <hr style="width: 100%; height: 1px;">
             <p> &copy;2026 Personal Knowledge Vault. All rights reserved.</p>
         </div>
     </footer>
